--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jest": "^29.3.1"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "name": "backend",
   "version": "1.0.0",
